force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Color__c/agf__ADM_Color__c.object-meta.xml
<CustomObject>
    <label>Color</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>