force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Color__c/fields/agf__Color__c.field-meta.xml
<CustomField>
    <fullName>agf__Color__c</fullName>
    <label>Color</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>