force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Color__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Colors</relationshipLabel>
    <relationshipName>Colors</relationshipName>
    <type>Lookup</type>
</CustomField>